posiGen_FullsendBox/src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>EE_Upgrade_Contractor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EE Upgrade Contractor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Subcontractor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (EE Upgrade Contractor)</relationshipLabel>
        <relationshipName>Opportunities_EE_Upgrader_For</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EE_work_done_in_Past__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EE work done in Past</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EU_Assigned_Date__c</fullName>
        <description>This is populated by the EU Project</description>
        <label>EU Assigned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EU_Assigned_old__c</fullName>
        <formula>true</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EU Assigned_old</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EU_Complete_Age__c</fullName>
        <formula>IF( ISNULL(  EU_Completed_Date__c ) , TODAY() - Contracts_Approved_Date__c , EU_Completed_Date__c - Contracts_Approved_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EU Complete Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EU_Completed_Date__c</fullName>
        <description>This is populated by the EU Project</description>
        <label>EU Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EU_Completed_Date_old__c</fullName>
        <label>EU Completed Date_old</label>
        <summarizedField>Energy_Efficiency__c.EU_Completed_date__c</summarizedField>
        <summaryForeignKey>Energy_Efficiency__c.Install__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>EU_Completed_old__c</fullName>
        <formula>true</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EU Completed_old</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EU_Projected_Elec_Savings_DlrsPerYr__c</fullName>
        <label>EU Projected Electrical Savings $/yr</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EU_Projected_Elec_kWh_perYear_Savings__c</fullName>
        <label>EU Projected Electrical kWh/yr Savings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EU_Projected_NG_Therms_PerYear_Savings__c</fullName>
        <label>EU Projected Nat Gas Therms/yr Savings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EU_Projected_Nat_Gas_Savings_yr__c</fullName>
        <label>EU Projected Nat Gas Savings $/yr</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EU_Status__c</fullName>
        <label>EU Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EU_Total_Cost__c</fullName>
        <description>This should eventually populate from the EU Project</description>
        <label>EU Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Earliest_Lease_Maturity_Date__c</fullName>
        <label>Earliest Lease Maturity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Elec_Account_Middle_Name__c</fullName>
        <label>Elec Account Middle Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Elec_Acct_City__c</fullName>
        <label>Elec Acct City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Elec_Acct_First_Name__c</fullName>
        <label>Elec Acct First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Elec_Acct_Full_Name__c</fullName>
        <formula>IF( ISBLANK( Elec_Account_Middle_Name__c ) ,  Elec_Acct_First_Name__c &amp;&quot; &quot;&amp; Elec_Acct_Last_Name__c , Elec_Acct_First_Name__c &amp;&quot; &quot;&amp; Elec_Account_Middle_Name__c &amp;&quot; &quot; &amp; Elec_Acct_Last_Name__c )</formula>
        <label>Elec Acct Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Elec_Acct_Last_Name__c</fullName>
        <label>Elec Acct Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Elec_Acct_Number__c</fullName>
        <label>Elec Acct Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Elec_Acct_Password__c</fullName>
        <label>Elec Acct Password</label>
        <length>25</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Elec_Acct_State__c</fullName>
        <label>Elec Acct State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Elec_Acct_Street_1__c</fullName>
        <label>Elec Acct Street 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Elec_Acct_Street_2__c</fullName>
        <label>Elec Acct Street 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Elec_Acct_Username__c</fullName>
        <description>The customer&apos;s electric utility username.</description>
        <label>Elec Acct Username</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Elec_Acct_ZipLast4__c</fullName>
        <label>Elec Acct ZipLast4</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Elec_Acct_Zip__c</fullName>
        <label>Elec Acct Zip</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Electric_Bill__c</fullName>
        <label>Electric Bill</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Electric_Usage_10__c</fullName>
        <inlineHelpText>kWh</inlineHelpText>
        <label>Electric Usage Oct</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Electric_Usage_11__c</fullName>
        <inlineHelpText>kWh</inlineHelpText>
        <label>Electric Usage Nov</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Electric_Usage_12__c</fullName>
        <inlineHelpText>kWh</inlineHelpText>
        <label>Electric Usage Dec</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Electrical_Service_Panel__c</fullName>
        <label>Electrical Service Panel</label>
        <picklist>
            <picklistValues>
                <fullName>Interior</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exterior</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Electricity_Provider__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Electricity Provider</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Utility_Type__c</field>
                <operation>equals</operation>
                <value>Electric</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Employer_Contact_Name__c</fullName>
        <label>Employer Contact Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Phone__c</fullName>
        <label>Employer Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Employer__c</fullName>
        <label>Employer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Energy_Audit_Completed_Date__c</fullName>
        <label>Energy Audit Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Energy_Efficiency_Assessor__c</fullName>
        <label>Energy Efficiency Assessor</label>
        <picklist>
            <picklistValues>
                <fullName>John</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E &amp; I Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Core USA (2012)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adrian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GJ (Green Jeans)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jeff H</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debbie</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Energy_Efficiency_Charge__c</fullName>
        <formula>Validation_EE_Monthly_Payment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Energy Efficiency Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Energy_Efficiency_Complete_Date__c</fullName>
        <label>Energy Efficiency Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Energy_Efficiency_Completion_Date__c</fullName>
        <label>Energy Efficiency Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Energy_Efficiency_Contractor__c</fullName>
        <label>Energy Efficiency Contractor</label>
        <picklist>
            <picklistValues>
                <fullName>Core USA (2012)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retro Fitz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E &amp; I Consultants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mr. Green Jeans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enviro Green/Diversified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rebirth</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Energy_Upgrade_Invoice_Date__c</fullName>
        <label>Energy Upgrade Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Cancellation_Date__c</fullName>
        <description>7 Calendar Days in LA, 3 Business Days otherwise.</description>
        <formula>if( ISPICKVAL(Property__r.Assessor_State__c,&quot;LA&quot;),
(Property__r.Sales_Appointment__c + 7),
if(MOD( Property__r.Sales_Appointment__c - DATE(2015,10,12),7)&lt;3,Property__r.Sales_Appointment__c +3,if(MOD( Property__r.Sales_Appointment__c - DATE(2015,10,12),7)=6,Property__r.Sales_Appointment__c +4,Property__r.Sales_Appointment__c +5))
)</formula>
        <label>Estimated Cancellation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_First_Payment_Date__c</fullName>
        <description>only for LA, use field on the Property object for market specific dates</description>
        <formula>IF( 

DAY(Property__r.Sales_Appointment__c) &lt; 16, 

DATE( 
IF( 
MONTH(Property__r.Sales_Appointment__c) &gt; 9, 
YEAR(Property__r.Sales_Appointment__c)+ 1, 
YEAR(Property__r.Sales_Appointment__c) 
), 
MONTH(Property__r.Sales_Appointment__c + 90), 
1 
), 
DATE( 
IF( 
MONTH(Property__r.Sales_Appointment__c) &gt; 8, 
YEAR(Property__r.Sales_Appointment__c)+ 1, 
YEAR(Property__r.Sales_Appointment__c) 
), 
MONTH(Property__r.Sales_Appointment__c + 120), 
1 
) 
)</formula>
        <label>Estimated First Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Lease_Amount__c</fullName>
        <formula>IF( Lease_System_Lease_Amount__c &gt; 0, Lease_System_Lease_Amount__c +  EE_Amount__c ,  Lease_Fee__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Lease Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Lease_Start_Date__c</fullName>
        <formula>IF(NOT(ISNULL(EU_Completed_Date_old__c)), EU_Completed_Date_old__c + 120, 
IF(NOT(ISNULL(Install_Completed__c)), Install_Completed__c + 210,
IF(NOT(ISNULL( Roof_Assessment_Complete_Date__c )), Roof_Assessment_Complete_Date__c + 240,
IF(NOT(ISNULL( Contracts_Approved_Date__c )), Contracts_Approved_Date__c + 250,null))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Lease Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_PBI_Rate__c</fullName>
        <description>For Connecticut leases</description>
        <label>Estimated PBI Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Rebate_Amount_in_Dollars__c</fullName>
        <label>Estimated Rebate Amount in Dollars</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Exceptions_DC__c</fullName>
        <formula>IF(ISBLANK(Property_Address__c) &amp;&amp; ( Copy_of_Pipeline_Stage__c = &quot;Feasibility Analysis&quot; || Copy_of_Pipeline_Stage__c= &quot;Layout Approval&quot; || Copy_of_Pipeline_Stage__c= &quot;Closed Won&quot; || Copy_of_Pipeline_Stage__c= &quot;Release to Installer&quot; || Copy_of_Pipeline_Stage__c= &quot;PV System Left Warehouse&quot; || Copy_of_Pipeline_Stage__c= &quot;Pending EU&quot; || Copy_of_Pipeline_Stage__c= &quot;Need to Board&quot; || Copy_of_Pipeline_Stage__c= &quot;Boarded&quot;), &quot;Property_Address__c Is Missing, &quot;,&quot;&quot;) &amp; IF(ISBLANK(Contracts_Approved_Date__c) &amp;&amp; (Copy_of_Pipeline_Stage__c= &quot;Feasibility Analysis&quot; || Copy_of_Pipeline_Stage__c= &quot;Layout Approval&quot; || Copy_of_Pipeline_Stage__c= &quot;Closed Won&quot; || Copy_of_Pipeline_Stage__c= &quot;Release to Installer&quot; || Copy_of_Pipeline_Stage__c= &quot;PV System Left Warehouse&quot; || Copy_of_Pipeline_Stage__c= &quot;Pending EU&quot; || Copy_of_Pipeline_Stage__c= &quot;Need to Board&quot; || Copy_of_Pipeline_Stage__c= &quot;Boarded&quot;), &quot;Contracts_Approved_Date__c Is Missing, &quot;,&quot;&quot;) &amp; IF(ISBLANK(PVA_Assessment_Complete_Date__c) &amp;&amp; (Copy_of_Pipeline_Stage__c= &quot;Layout Approval&quot; || Copy_of_Pipeline_Stage__c= &quot;Closed Won&quot; || Copy_of_Pipeline_Stage__c= &quot;Release to Installer&quot; || Copy_of_Pipeline_Stage__c= &quot;PV System Left Warehouse&quot; || Copy_of_Pipeline_Stage__c= &quot;Pending EU&quot; || Copy_of_Pipeline_Stage__c= &quot;Need to Board&quot; || Copy_of_Pipeline_Stage__c= &quot;Boarded&quot;), &quot;PVA_Assessment_Complete_Date__c Is Missing, &quot;,&quot;&quot;)</formula>
        <label>Exceptions DC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exceptions_EE__c</fullName>
        <formula>IF(ISBLANK(EU_Completed_Date__c) &amp;&amp; ( Copy_of_Pipeline_Stage__c = &quot;Need to Board&quot; || Copy_of_Pipeline_Stage__c = &quot;Boarded&quot;), &quot;EU_Completed_Date__c Is Missing, &quot;,&quot;&quot;) &amp;
 IF(ISBLANK(EU_Projected_Elec_kWh_perYear_Savings__c) &amp;&amp; (Copy_of_Pipeline_Stage__c = &quot;Need to Board&quot; || Copy_of_Pipeline_Stage__c = &quot;Boarded&quot;), &quot;EU_Projected_Elec_kWh_perYear_Savings__c Is Missing, &quot;,&quot;&quot;) &amp;
 IF(ISBLANK(EU_Projected_Elec_Savings_DlrsPerYr__c) &amp;&amp; (Copy_of_Pipeline_Stage__c = &quot;Need to Board&quot; || Copy_of_Pipeline_Stage__c = &quot;Boarded&quot;), &quot;EU_Projected_Elec_Savings_DlrsPerYr__c Is Missing, &quot;,&quot;&quot;) &amp;
 IF(ISBLANK(EU_Projected_Nat_Gas_Savings_yr__c) &amp;&amp; (Copy_of_Pipeline_Stage__c = &quot;Need to Board&quot; || Copy_of_Pipeline_Stage__c = &quot;Boarded&quot;), &quot;EU_Projected_Nat_Gas_Savings_yr__c Is Missing, &quot;,&quot;&quot;) &amp;
 IF(ISBLANK(EU_Projected_NG_Therms_PerYear_Savings__c) &amp;&amp; (Copy_of_Pipeline_Stage__c = &quot;Need to Board&quot; || Copy_of_Pipeline_Stage__c = &quot;Boarded&quot;), &quot;EU_Projected_NG_Therms_PerYear_Savings__c Is Missing, &quot;,&quot;&quot;)</formula>
        <label>Exceptions EE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exceptions_FIN__c</fullName>
        <formula>IF(ISBLANK(PVI_Total_Cost__c) &amp;&amp; (Copy_of_Pipeline_Stage__c = &quot;Pending EU&quot; || Copy_of_Pipeline_Stage__c = &quot;Need to Board&quot; || Copy_of_Pipeline_Stage__c = &quot;Boarded&quot;), &quot;PVI_Total_Cost__c Is Missing, &quot;,&quot;&quot;) &amp; IF(ISBLANK(BB_Funding_Date__c) &amp;&amp; (Copy_of_Pipeline_Stage__c = &quot;Pending EU&quot; || Copy_of_Pipeline_Stage__c = &quot;Need to Board&quot; || Copy_of_Pipeline_Stage__c = &quot;Boarded&quot;), &quot;BB_Funding_Date__c Is Missing, &quot;,&quot;&quot;) &amp; IF(ISBLANK(BB_Funding_Amount__c) &amp;&amp; (Copy_of_Pipeline_Stage__c = &quot;Pending EU&quot; || Copy_of_Pipeline_Stage__c = &quot;Need to Board&quot; || Copy_of_Pipeline_Stage__c = &quot;Boarded&quot;), &quot;BB_Funding_Amount__c Is Missing, &quot;,&quot;&quot;) &amp; IF((ISBLANK(EU_Total_Cost__c)&amp;&amp;  Has_EE_as_a_Solar_Product__c ) &amp;&amp; (Copy_of_Pipeline_Stage__c = &quot;Pending EU&quot; || Copy_of_Pipeline_Stage__c = &quot;Need to Board&quot; || Copy_of_Pipeline_Stage__c = &quot;Boarded&quot;), &quot;EU_Total_Cost__c Is Missing, &quot;,&quot;&quot;) &amp; IF(ISBLANK(ITC_Funding_Amount__c) &amp;&amp; (Copy_of_Pipeline_Stage__c = &quot;Pending EU&quot; || Copy_of_Pipeline_Stage__c = &quot;Need to Board&quot; || Copy_of_Pipeline_Stage__c = &quot;Boarded&quot;), &quot;ITC_Funding_Amount__c Is Missing, &quot;,&quot;&quot;) &amp; IF(ISBLANK(ITC_Funding_Recd_Date__c) &amp;&amp; (Copy_of_Pipeline_Stage__c = &quot;Pending EU&quot; || Copy_of_Pipeline_Stage__c = &quot;Need to Board&quot; || Copy_of_Pipeline_Stage__c = &quot;Boarded&quot;), &quot;ITC_Funding_Recd_Date__c Is Missing, &quot;,&quot;&quot;) &amp; IF(ISBLANK(State_Tax_Credit_Refund_Date__c) &amp;&amp; (Copy_of_Pipeline_Stage__c = &quot;Pending EU&quot; || Copy_of_Pipeline_Stage__c = &quot;Need to Board&quot; ), &quot;State_Tax_Credit_Refund_Date__c Is Missing, &quot;,&quot;&quot;) &amp; IF(ISBLANK(State_Tax_Credit_Refund_Amount__c) &amp;&amp; (Copy_of_Pipeline_Stage__c = &quot;Pending EU&quot; || Copy_of_Pipeline_Stage__c = &quot;Need to Board&quot;  ), &quot;State_Tax_Credit_Refund_Amount__c Is Missing, &quot;,&quot;&quot;) &amp; IF(ISBLANK(Retail_Price__c) &amp;&amp; (Copy_of_Pipeline_Stage__c = &quot;Pending EU&quot; || Copy_of_Pipeline_Stage__c = &quot;Need to Board&quot; || Copy_of_Pipeline_Stage__c = &quot;Boarded&quot;), &quot;Retail_Price__c Is Missing, &quot;,&quot;&quot;) &amp; IF(ISBLANK(System_Size_in_KW__c) &amp;&amp; (Copy_of_Pipeline_Stage__c = &quot;Pending EU&quot; || Copy_of_Pipeline_Stage__c = &quot;Need to Board&quot; || Copy_of_Pipeline_Stage__c = &quot;Boarded&quot;), &quot;System_Size_in_KW__c Is Missing, &quot;,&quot;&quot;) &amp;
IF(ISBLANK(Lease_Fee__c) &amp;&amp; (Copy_of_Pipeline_Stage__c = &quot;Boarded&quot;), &quot;Lease_Fee__c Is Missing, &quot;,&quot;&quot;) &amp;
IF(ISBLANK(Lease_Start_Date__c) &amp;&amp; (Copy_of_Pipeline_Stage__c = &quot;Boarded&quot;), &quot;Lease_Start_Date__c Is Missing, &quot;,&quot;&quot;)</formula>
        <label>Exceptions FIN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exceptions_OPS__c</fullName>
        <formula>IF(ISBLANK(PVI_Rails_and_Panels_Left_WH_Date__c) &amp;&amp; (Copy_of_Pipeline_Stage__c = &quot;PV System Left Warehouse&quot; || Copy_of_Pipeline_Stage__c = &quot;Pending EU&quot; || Copy_of_Pipeline_Stage__c = &quot;Need to Board&quot; || Copy_of_Pipeline_Stage__c = &quot;Boarded&quot;), &quot;PVI_Rails_and_Panels_Left_WH_Date__c Is Missing, &quot;,&quot;&quot;) &amp;
IF(ISBLANK(PVI_Placed_In_Service_Date__c) &amp;&amp; (Copy_of_Pipeline_Stage__c = &quot;Pending EU&quot; || Copy_of_Pipeline_Stage__c = &quot;Need to Board&quot; || Copy_of_Pipeline_Stage__c = &quot;Boarded&quot;), &quot;PVI_Placed_In_Service_Date__c Is Missing, &quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exceptions OPS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FICO_Source__c</fullName>
        <description>Import note for reporting service</description>
        <label>FICO Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FICO_Susco__c</fullName>
        <label>FICO_Susco</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FICO_validated__c</fullName>
        <description>Credit Score reported from reporting service</description>
        <label>FICO</label>
        <length>50</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Fair_Market_Value__c</fullName>
        <formula>Gross_System_Cost_in_Dollars__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fair Market Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Family_Friend_Contact_1__c</fullName>
        <label>Family/Friend Contact 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Family_Friend_Contact_2__c</fullName>
        <label>Family/Friend Contact 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feasible_Solar_Hot_Water_Heater__c</fullName>
        <label>Feasible Solar Hot Water Heater</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Feasible_Solar__c</fullName>
        <inlineHelpText>Enter feasible solar from Roof Assessment</inlineHelpText>
        <label>Feasible Solar Size</label>
        <picklist>
            <picklistValues>
                <fullName>Not Feasible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 kw</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.5 kw</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.7 kw</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 kw</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.5Kw</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.6Kw</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.8kw</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 kw</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8 kw</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 kw</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 kw</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Feasible_Stage__c</fullName>
        <inlineHelpText>This field may trigger an email alert or SMS message when given a value.</inlineHelpText>
        <label>Feasible Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Packet Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Install Released</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Install Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Install Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Install Passed Final Inspection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted to 3rd Party Admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved by 3rd Party &amp; Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted for Federal Credit Filing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Treasury Department Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Federal_Grant_ITC_Status__c</fullName>
        <inlineHelpText>ITC = Income Tax Credit</inlineHelpText>
        <label>xxFederal Grant/ITC Status</label>
        <picklist>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received Grant/ITC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Funded by ITC Investor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Final_3rd_Party_Inspection_Compete_Date__c</fullName>
        <description>Used for Apex trigger.</description>
        <label>Final 3rd Party Inspection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Inspection_Notification_Received__c</fullName>
        <label>Final Inspection Notification Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Finance_Option_Code__c</fullName>
        <formula>IF( ISPICKVAL( Finance_Type__c , &quot;No Initial Payment&quot;) , &quot;NI&quot;, &quot;N/A&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Finance Option Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finance_Type__c</fullName>
        <label>Finance Type</label>
        <picklist>
            <picklistValues>
                <fullName>No Initial Payment</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Financing_Bill_Payment_Options__c</fullName>
        <label>Financing Bill Payment Options</label>
        <picklist>
            <picklistValues>
                <fullName>Checking / Savings Acct (Auto-pay)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card Payments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online Pay (One-time $15 fee)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Postal Mail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Financing_Term_in_Months__c</fullName>
        <formula>Lease_System_Term__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Financing Term in Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Financing_is_Checking_or_Savings__c</fullName>
        <formula>ISPICKVAL( Financing_Bill_Payment_Options__c , &apos;Checking / Savings Acct (Auto-pay)&apos;)</formula>
        <label>Financing is Checking or Savings</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Financing_is_Credit_Card__c</fullName>
        <formula>ISPICKVAL( Financing_Bill_Payment_Options__c, &apos;Credit Card Payments&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Financing is Credit Card</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Financing_is_Online_Pay__c</fullName>
        <formula>ISPICKVAL( Financing_Bill_Payment_Options__c, &apos;Online Pay (One-time $15 fee)&apos; )</formula>
        <label>Financing is Online Pay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Financing_is_Postal_Mail__c</fullName>
        <formula>ISPICKVAL( Financing_Bill_Payment_Options__c, &apos;Postal Mail&apos; )</formula>
        <label>Financing is Postal Mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Closing_Call_Made__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First Closing Call Made</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Intro_Call_Made__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First Intro Call Made</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Payment_Date_60_after_EU_NM__c</fullName>
        <formula>IF( ISNULL(PVI_Net_Meter_Install_Date__c)  || ISNULL(EU_Completed_Date__c), Null, 
IF(EU_Completed_Date__c &gt; PVI_Net_Meter_Install_Date__c, EU_Completed_Date__c, PVI_Net_Meter_Install_Date__c) + 60)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Payment Date (60 after EU/NM)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Payment_Due_Dat__c</fullName>
        <formula>IF( ISNULL( First_Payment_Due_Date_Override__c ) ,  First_Payment_Due_Date_Default__c , First_Payment_Due_Date_Override__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Payment Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Payment_Due_Date_Default__c</fullName>
        <formula>DATE( YEAR(Booking_Date__c ) , MONTH(Booking_Date__c ) + 2 ,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Payment Due Date Default</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Payment_Due_Date_Override__c</fullName>
        <label>First Payment Due Date Override</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fuel_Oil_Acct_Password__c</fullName>
        <label>Fuel Oil Acct Password</label>
        <length>25</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Fuel_Oil_Acct_Username__c</fullName>
        <label>Fuel Oil Acct Username</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fuel_Oil_Utility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fuel Oil Utility</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Utility_Type__c</field>
                <operation>equals</operation>
                <value>Fuel Oil</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Fuel Oil Utility)</relationshipLabel>
        <relationshipName>Opportunities3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fuel_Oil__c</fullName>
        <label>Fuel Oil Acct Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Address_from_UA__c</fullName>
        <formula>Elec_Acct_Street_1__c + &apos;, &apos; +
IF(ISBLANK(Elec_Acct_Street_2__c),&apos;&apos;, Elec_Acct_Street_2__c + &apos;, &apos;) + 
Elec_Acct_City__c + &apos; &apos; + Elec_Acct_State__c + &apos; &apos; + Elec_Acct_Zip__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Address from the Utility Account,</inlineHelpText>
        <label>Full Address from UA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fund_old_text_entry__c</fullName>
        <label>Old Text Entry Fund</label>
        <length>50</length>
        <type>Text</type>
    </fields>
</CustomObject>